--- a/RapidRecruit/Views/JobApplications/Details.cshtml
+++ b/RapidRecruit/Views/JobApplications/Details.cshtml
@@ -43,6 +43,10 @@
                     <dl class="mt-2 grid grid-cols-1 gap-x-4 gap-y-6 sm:grid-cols-2">
                         <div>
                             <dt class="text-sm font-medium text-gray-500">Applicant</dt>
+                            <dd class="mt-1 text-sm text-gray-900">@($"{Model.User.FirstName} {Model.User.LastName}")</dd>
+                        </div>
+                        <div>
+                            <dt class="text-sm font-medium text-gray-500">Email</dt>
                             <dd class="mt-1 text-sm text-gray-900">@Model.User.UserName</dd>
                         </div>
                         <div>
