--- a/RapidRecruit/Views/JobPostings/Details.cshtml
+++ b/RapidRecruit/Views/JobPostings/Details.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Job Posting Details";
 }
 
-<div class="max-w-6xl mx-auto py-8 px-4 sm:px-6 lg:px-8">
+<div class="max-w-7xl mx-auto py-8 px-4 sm:px-6 lg:px-8">
     <div class="mb-8">
         <div class="flex items-center justify-between">
             <h1 class="text-3xl font-bold text-gray-900">@Html.DisplayFor(model => model.Title)</h1>
@@ -63,7 +63,8 @@
                 <table class="min-w-full divide-y divide-gray-200">
                     <thead class="bg-gray-50">
                         <tr>
-                            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Applicant</th>
+                            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Full Name</th>
+                            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Email</th>
                             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
                             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Resume</th>
                             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Applied Date</th>
@@ -75,6 +76,11 @@
                         @foreach (var application in Model.JobApplications)
                         {
                             <tr>
+                                <td class="px-6 py-4 whitespace-nowrap">
+                                    <div class="text-sm font-medium text-gray-900">
+                                        @($"{application.User.FirstName} {application.User.LastName}")
+                                    </div>
+                                </td>
                                 <td class="px-6 py-4 whitespace-nowrap">
                                     <div class="text-sm font-medium text-gray-900">@application.User.UserName</div>
                                 </td>
